--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT"
 description = "Core features for interacting with the game Devil Daggers"
-repository = ""
+repository = "https://github.com/lsaa/ddcore-rs"
 
 [features]
 default = ["memory", "ddinfo", "ddcl_submit"]
