--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ddcore-rs"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 license = "MIT"
 description = "Core features for interacting with the game Devil Daggers"
@@ -21,6 +21,8 @@ ddcl_submit = ["aes", "block-modes", "pbkdf2", "ring", "base32", "base64"]
 anyhow = "1.0.43"
 num-traits = "0.2"
 num-derive = "0.2"
+bytestream = "0.4.1"
+libflate = "1.1.1"
 serde = { version = "1.0.60", features = ["serde_derive"] }
 serde_json = { version = "1.0", optional = true }
 process-memory = { version = "0.4.0", optional = true }
