--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,4 +40,4 @@ base64 = { version = "0.13.0", optional = true }
 futures = { version = "0.3.17", optional = true }
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3.9", features = ["tlhelp32"], optional = true }
+winapi = { version = "0.3.9", features = ["tlhelp32", "winuser"], optional = true }
