--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ddcore-rs"
-version = "0.1.8"
+version = "0.1.9"
 edition = "2021"
 license = "MIT"
 description = "Core features for interacting with the game Devil Daggers"
@@ -23,6 +23,7 @@ num-traits = "0.2"
 num-derive = "0.2"
 bytestream = "0.4.1"
 libflate = "1.1.1"
+kaitai = "0.1.2"
 serde = { version = "1.0.60", features = ["serde_derive"] }
 serde_json = { version = "1.0", optional = true }
 process-memory = { version = "0.4.0", optional = true }
