--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,6 @@ futures = { version = "0.3.17", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["tlhelp32", "winuser"], optional = true }
+
+[dev-dependencies]
+md5 = "0.7.0"
