--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ddcore-rs"
-version = "0.1.19"
+version = "0.1.20"
 edition = "2021"
 license = "MIT"
 description = "Core features for interacting with the game Devil Daggers"
@@ -15,6 +15,7 @@ all-features = true
 default = []
 memory = ["serde_json", "process-memory", "sysinfo", "winapi", "scan_fmt"]
 ddinfo = ["serde_json", "hyper", "hyper-tls", "native-tls", "futures", "base64"]
+ddreplay = ["serde_json", "hyper", "hyper-tls", "native-tls", "futures", "base64"]
 ddcl_submit = ["aes", "block-modes", "pbkdf2", "ring", "base32", "base64"]
 logger = []
 
