--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ all-features = true
 [features]
 default = []
 memory = ["serde_json", "process-memory", "sysinfo", "winapi", "scan_fmt"]
-ddinfo = ["serde_json", "hyper", "hyper-tls", "native-tls", "futures", "base64"]
-ddreplay = ["serde_json", "hyper", "hyper-tls", "native-tls", "futures", "base64"]
+ddinfo = ["serde_json", "hyper", "hyper-rustls", "rustls", "futures", "base64"]
+ddreplay = ["serde_json", "hyper", "hyper-rustls", "rustls", "futures", "base64"]
 ddcl_submit = ["aes", "cbc", "pbkdf2", "ring", "base32", "base64"]
 logger = []
 
@@ -31,8 +31,8 @@ process-memory = { version = "0.4", optional = true }
 sysinfo = { version = "0.23", optional = true }
 scan_fmt = {version = "0.2", optional = true }
 hyper = { version = "0.14", optional = true, features = ["full"] }
-hyper-tls = { version = "0.5", optional = true }
-native-tls = { version = "0.2", optional = true }
+hyper-rustls = { version = "0.23", optional = true }
+rustls = { version = "0.20", optional = true }
 aes = { version = "0.8", optional = true }
 cbc = { version = "0.1", optional = true }
 pbkdf2 = { version = "0.10", default-features = false, optional = true }
